# soti-mobicontrol-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: installation.md  usage.md
examples/: example_basic_usage.py
soti_mobicontrol_api/: api.py  auth.py  config.py  soti_api_client.py
soti_mobicontrol_api/endpoints/: devices.py  users.py
soti_mobicontrol_api/endpoints/device/: get_all_devices.py  get_devices.py
soti_mobicontrol_python/: SotiApiClient.py  auth.py  quote_path.py  soti_api_client.py  soti_mobicontrol_config.py
soti_mobicontrol_python/endpoints/device/: device_action.py  device_certificate.py  device_custom_attributes.py  device_rename.py  device_user.py  get_all_devices.py  get_device.py  get_device_batch.py  get_devices.py
soti_mobicontrol_python/endpoints/devicegroups/: get_devicegroups.py  member_of_devicegroup.py
soti_mobicontrol_python/endpoints/security/: users.py
soti_mobicontrol_python/endpoints/servers/: health.py
soti_mobicontrol_python/helper/: path.py
soti_mobicontrol_python/transform/: device_id.py
tests/: test_api.py  test_auth.py  test_devices.py  test_users.py
tests/device/: test_device_action.py  test_device_custom_attributes.py  test_device_user.py  test_get_all_devices.py  test_get_device.py
tests/devicegroups/: test_devicegroups.py  test_get_devicegroups.py  test_member_devicegroup.py
tests/helper/: config.py
tests/security/: test_users.py
tests/servers/: test_health.py
