[tool.poetry]
name = "soti_mobicontrol_python"
version = "0.5.0"
description = "This is Python library wrapper the SOTI MobiControl REST API to manage devices, profiles, and packages. "
authors = ["snitkjaer <snitkjaer@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snitkjaer/soti-mobicontrol-python"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "0.27.2"
anyio = "^4.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"